<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content" android:id="@+id/linearLayout">

    <View
            android:layout_width="wrap_content"
            android:layout_height="40dp" android:id="@+id/articleRow"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:background="@android:color/background_dark"/>
    <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp" app:srcCompat="@android:drawable/sym_def_app_icon"
            android:id="@+id/articleIcon"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@null"/>
    <TextView
            android:text="@string/not_article_title"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/articleTitle" app:layout_constraintStart_toEndOf="@+id/articleIcon"
            app:layout_constraintTop_toTopOf="@+id/articleIcon"
            app:layout_constraintEnd_toEndOf="parent" android:textColor="#FFF"
            android:textSize="18sp" android:maxLines="1" app:layout_constraintHorizontal_bias="0.0"
    />
    <TextView
            android:text="@string/article_date_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/articleDateHeader" android:textColor="#FFF"
            app:layout_constraintTop_toBottomOf="@+id/articleTitle"
            app:layout_constraintStart_toStartOf="@+id/articleTitle"
            app:layout_constraintBottom_toBottomOf="@+id/articleIcon" app:layout_constraintVertical_bias="1.0"
            android:textSize="12sp"/>
    <TextView
            android:text="@string/article_create_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/articleCreateDate" app:layout_constraintStart_toEndOf="@+id/articleDateHeader"
            app:layout_constraintTop_toTopOf="@+id/articleDateHeader"
            app:layout_constraintBottom_toBottomOf="@+id/articleDateHeader" android:textColor="#FFF"
            android:textSize="12sp"/>
    <TextView
            android:text="@string/articleUserNameHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/articleUserNameHeader"
            app:layout_constraintTop_toTopOf="@+id/articleCreateDate"
            app:layout_constraintBottom_toBottomOf="@+id/articleCreateDate" android:textColor="#FFF"
            app:layout_constraintStart_toEndOf="@+id/articleCreateDate" android:layout_marginStart="4dp"
            android:textSize="12sp"/>
    <TextView
            android:text="@string/article_user_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/articleUserName"
            app:layout_constraintTop_toTopOf="@+id/articleUserNameHeader"
            app:layout_constraintStart_toEndOf="@+id/articleUserNameHeader"
            app:layout_constraintBottom_toBottomOf="@+id/articleUserNameHeader"
            app:layout_constraintEnd_toEndOf="@+id/articleTitle" app:layout_constraintHorizontal_bias="0.0"
            android:textColor="#FFF"/>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:id="@+id/horizontalLine" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#FFF"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintBottom_toBottomOf="@+id/articleRow"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/articleIcon"
            app:layout_constraintVertical_bias="1.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>